# SPLN2324

./: README.md
TPC1/p1/: pyproject.toml
TPC1/p1/word_freq/: __init__.py
TPC3/: makepyproject.py
